[metadata]
name = pysniper
version = attr: pysniper.__version__
author = Tian Guoyun
description = Track changes to every line of code and trigger customizable callback events.
license = MIT
classifiers =
    Programming Language :: Python :: 3
[options]
install_requires =
    termcolor
python_requires = >=3.8
packages = pysniper

# To provide executable scripts, use entry points in preference to the
# "scripts" keyword. Entry points provide cross-platform support and allow
# pip to create the appropriate form of executable for the target platform.
# [options.entry_points]
# console_scripts =
#     my-application = mypackage.mymodule:my_function
#     another-application = mypackage.mymodule:another_function
